<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!-- This file contains resource definitions for displayed strings, allowing
     them to be changed based on the locale and options. -->

<resources>
    <!-- Simple strings. -->
    <string name="app_name">App-based certificate import</string>
    <string name="SubjectName">SubjectName:</string>
    <string name="subjectalternativename">SubjectAlternativeName:</string>
    <string name="issuer">Issuer:</string>
    <string name="keyusage">KeyUsage:</string>
    <string name="extendedkeyusage">ExtendedKeyUsage:</string>
    <string name="notbeforedate">NotBeforeDate:</string>
    <string name="notafterdate">NotAfterDate:</string>
    <string name="serialnumber">SerialNumber:</string>
    <string name="version">Version:</string>
    <string name="import_the_certificate_into_ucp">Import the certificate into UCP</string>
    <string name="undo_import">Undo import</string>
    <string name="import_certificate">Import certificate</string>
    <string name="finish_button_text">Finish</string>
    <string name="import_now_button_text">import now</string>
    <string name="password_dialog_text">Please specify certificate password</string>
    <string name="password_text">Password</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="ok_button_text">Ok</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_description">Profile description</string>
    <string name="profile_type">Profile type</string>
    <string name="profile_status">Profile status</string>
    <string name="is_required">Is required:</string>
</resources>
