<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profiles_list_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/profiles_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btn_cert_import"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:clickable="true"
        android:scrollbars="vertical"
        android:visibility="visible" />

    <Button
        android:id="@+id/btn_cert_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:onClick="onCertImportClicked"
        android:text="@string/import_certificate" />

    <Button
        android:id="@+id/btn_finish_import"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btn_cert_import"
        android:onClick="onCertImportClicked"
        android:text="@string/finish_button_text" />

    <CheckBox
        android:id="@+id/cb_importNaw"
        android:layout_width="118dp"
        android:layout_height="46dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/btn_finish_import"
        android:checked="true"
        android:text="@string/import_now_button_text" />

</RelativeLayout>
